--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "osu-api-extended": "^2.5.12",
+    "nodemon": "^2.0.22",
     "serve-favicon": "^2.5.0"
   }
 }
